# nexus_prime

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  COMMIT_262_REPORT.md  CONTRIBUTING.md  CURSOR_MASTER_CONTEXT.md  DASHBOARD_BLUEPRINT.md  DEEP_SCAN_REPORT.md  DEPLOYMENT.md  DIVINE_CODEX_MACHINE.yaml  Dockerfile.agents  Dockerfile.apex  Dockerfile.dashboard  Dockerfile.gateway  Dockerfile.spine  Dockerfile.throne  ENTERPRISE_CODEX.yaml  EXECUTION_REPORT.md  EXECUTIVE_SUMMARY_INVESTOR.md  FULL_STACK_UPGRADE_REPORT.md  GLOBAL_HIVE_MEMORY.json  LICENSE  MASTER_ACTION_PLAN.md  MASTER_DOCUMENTATION.md  NEXUS_CIVILIZATION_BOOK.md  NEXUS_COMPREHENSIVE_AUDIT_REPORT.md  NEXUS_PRIME_COMPREHENSIVE_STATUS.md  NEXUS_SYSTEM_MAP.md  PRODUCTION_VERIFICATION.md  PROJECT_MAP_COMPLETE.md  README.md  REVOLUTION_EVALUATION_REPORT.md  ROADMAP.md  RUNBOOK.md  SECURITY.md  SENTINEL_BENCHMARK.md  SESSION_REPORT_20260221.md  SOVEREIGN_COMMAND_CENTER_README.md  SOVEREIGN_FULL_AUDIT_REPORT.md  (+20 more)
SOURCE_CODE_EXTRACTED/planets/X-BIO/xbio-sovereign-backup/: pyproject.toml  replit.md
SOURCE_CODE_EXTRACTED/planets/X-BIO/xbio-sovereign-backup/xbio-website/src/: App.jsx
SOURCE_CODE_EXTRACTED/planets/X-BIO/xbio-sovereign-backup/xbio-website/src/i18n/: index.js
SOURCE_CODE_EXTRACTED/planets/X-BIO/xbio-sovereign-backup/xbio-website/src/pages/: Boardroom.css
neural_spine/spine-core/: Cargo.toml
neural_spine/spine-core/src/: agent_buffer.rs  consolidation.rs  ffi.rs  gwt.rs  lib.rs  ring_buffer.rs  shm.rs
neural_spine/spine-server/: Cargo.toml
neural_spine/spine-server/src/: main.rs
(+2034 files in other folders)
