[package]
name = "spine-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Neural Spine server: GWT broadcast loop, interrupt dispatcher, Redis bridge, HTTP health"

[dependencies]
spine-core = { path = "../spine-core" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["tokio"] }
redis = { version = "0.24", features = ["tokio-comp"] }
libc = "0.2"
